# chessai

./: .gitignore  AGENTS.md  Cargo.toml  README.md  chessai.test  engine.go  engine_test.go  go.mod  move_sort.go  pregen.go  search.go  utils.go
XQlightPy/: book.py
examples/: undo_demo.rs  vs_pikafish.rs
src/: attacks.rs  bitboard.rs  book.rs  borad.rs  color.rs  engine.rs  error.rs  eval.rs  fen.rs  history.rs  lib.rs  limits.rs  magic.rs  main.rs  movegen.rs  mv.rs  picker.rs  piece.rs  position.rs  pregen.rs  search.rs  see.rs  shell.rs  square.rs  state.rs  tt.rs  util.rs  zobrist.rs
src/data/: book.rs  mod.rs
src/engine/: pregen.rs
tests/: tests.rs
