[package]
name = "chessai"
version = "0.1.0"
edition = "2021"
authors = ["atopx <3940422@qq.com>"]
repository = "https://github.com/atopx/chessai.git"
description = "a chiness chess ai"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
rand = "0.8"
