[package]
name = "chessai"
version = "1.0.1"
edition = "2024"
authors = ["atopx <3940422@qq.com>"]
repository = "https://github.com/atopx/chessai.git"
homepage = "https://github.com/atopx/chessai.git"
documentation = "https://docs.rs/chessai"
keywords = ["xiangqi", "chess", "bitboard", "engine", "chinese-chess"]
description = "High-performance Xiangqi (Chinese Chess) AI engine with u128 bitboards"
license = "MIT"
readme = "README.md"
include = [
    "src/**/*.rs",
    "assets/BOOK.DAT",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[dependencies]
thiserror = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
